--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <header class="banner">
                 <h1 class="logo-solution"><img src="img/logo-xpendo-solutions.svg" alt="XP-endo Solutions"></h1>
                 <h2 class="claim-home">expand <br>your <br>mind</h2>
-                <a data-target="#modal-video" data-toggle="modal" data-video="https://www.youtube.com/watch?v=ij4BmrL0sL8" href="#" class="btn-play"><img src="img/icon-play-white.svg" alt="Play movie"></a>
+                <a data-target="#modal-video" data-toggle="modal" data-video="https://www.youtube.com/embed/2E-UsKdZD_4" href="#" class="btn-play"><img src="img/icon-play-white.svg" alt="Play movie"></a>
                 <img class="bg-img" src="img/bg-home-large.jpg" alt="XP-endo Shaper">
             </header>
 
