--- a/finisher.html
+++ b/finisher.html
@@ -232,7 +232,7 @@
                         <li><a target="_blank" href="https://www.fkg.ch/faq">FAQ</a></li>
                     </ul>
                 </div>
-                <a href="https://www.fkg.ch/xpendo" class="logo"><img src="img/logo-fkg-footer.svg" alt="FKG swiss endo"></a>
+                <a href="#" class="logo"><img src="img/logo-fkg-footer.svg" alt="FKG swiss endo"></a>
             </div>
             <div class="container xp-follow-container">
                 <h3>Siguenos</h3>
@@ -240,7 +240,7 @@
 <!-- Begin Mailchimp Signup Form -->
 <div id="mc_embed_signup">
 				<h4>Suscríbase a nuestro boletín</h4>
-<form action="https://fkg.us20.list-manage.com/subscribe/post?u=459e2682cbd0afb347f2f3bdf&amp;id=92850ccfb0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
+<form action="#" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
     <div id="mc_embed_signup_scroll">
 	
 <div class="indicates-required"><span class="asterisk">*</span> indica requerido</div>
@@ -291,7 +291,7 @@
             </div>
             <div class="address-privacy">
                 <div class="container">
-                    <p>FKG Dentaire SA, Jr Moquegua 270, Int 129 - 131 Cercado de Lima, Peru</p>
+                    <p>DIDENT SRL, Jr Moquegua 270, Int 129 - 131 Cercado de Lima, Peru</p>
                     <p><a target="_blank" href="#">Data Privacy Policy</a></p>
                 </div>
             </div>
