--- a/index.html
+++ b/index.html
@@ -94,22 +94,22 @@
                 <div class="row pt-3 pb-1">
                     <div class="col-sm-6 col-md-12 col-lg-3 offset-xl-1">
                         <h2><img src="img/logo-ids.png" alt="IDS"></h2>
-                        <h2 class="claim">TALLER TEORICO PRACTICO XP ENDO </h2>
+                        <h2 class="claim">METAL DISEÑO Y CINEMATICA </h2>
                     </div>
                     <div class="col-sm-6 col-md-4 col-lg-4 col-xl-3">
-                        <h3>Entrenamiento de Endo</h3> 
-                        <p>Lima, Mayo <br>A partir de las 8.00 horas,<br>hasta 20.00 Horas.</p>
-                        <h4 class="mb-2">Registro <br>Jr Moquegua 270, Int 129 - 131 Cercado de Lima, Peru. </h4>
-                        <p><a href="#" target="_blank" class="btn btn-outline-light">Mas info</a></p>
+                        <h3>"Nuevos Horizontes en Instrumentacion Mecanizada"</h3> 
+                        <p>Lima, 13 de Mayo <br>A partir de las 9.00 horas,<br>hasta 11.30 Horas.</p>
+                        <h4 class="mb-2">Ubicacion <br>Colegio Odontologico del Peru Calles Oceano Artico 261, Urb. Santa Constanza, Surco.</h4>
+                        <p><a href="https://api.whatsapp.com/send?phone=51995160225" target="_blank" class="btn btn-outline-light">Mas info</a></p>
                     </div>
                     <div class="col-md-8 col-lg-5 col-xl-4">
                         <dl>
-                            <dt><img src="img/Dr-Andreas-Krokidis.jpg" alt="Dr-Andreas-Krokidis" class="portrait"><img src="img/Dr-Gilberto-Debelian.jpg" alt="Dr-Gilberto-Debelian" class="portrait">Expositores</dt>
-                            <dd>Dr Daniel Sanabria <br>Dr Alejandro Jaime</dd>
-                            <dt><img src="img/Dr-Guillaume-Jouanny.jpg" alt="Dr-Guillaume-Jouannyt" class="portrait"><img src="img/Dr-Prajakta-Mahindre.jpg" alt="Dr Prajakta Mahindre" class="portrait">Workshop </dt>
-                            <dd>Taller Teorico <br>Taller Practico</dd>
-                            <dt><img src="img/Dr-Klaus-Lauterbach.jpg" alt="Dr-Klaus-Lauterbacha" class="portrait">Incluye</dt>
-                            <dd>Certificado de Asistencia</dd>
+                            <dt><img src="img/Dr-Prajakta-Mahindre.jpg" alt="Dr-Andreas-Krokidis" class="portrait"><img src="img/Dr-Andreas-Krokidis.jpg" alt="Dr-Gilberto-Debelian" class="portrait">Expositor</dt>
+                            <dd>ESP. Alejandro Jaime <br> Argentina</dd>
+                            <dt><img src="img/Dr-Guillaume-Jouanny.jpg" alt="Dr-Guillaume-Jouannyt" class="portrait"><img src="img/Dr-Prajakta-Mahindre.jpg" alt="Dr Prajakta Mahindre" class="portrait">Incluye </dt>
+                            <dd>Certificado de Asistencia<br> s/30.00 Soles</dd>
+                            <dt><img src="img/Dr-Klaus-Lauterbach.jpg" alt="Dr-Klaus-Lauterbacha" class="portrait">Precio</dt>
+                            <dd>INGRESO LIBRE</dd>
                         </dl>
                     </div>
                 </div>
@@ -247,7 +247,7 @@
                         <li><a target="_blank" href="https://www.fkg.ch/faq">FAQ</a></li>
                     </ul>
                 </div>
-                <a href="https://www.fkg.ch/xpendo" class="logo"><img src="img/logo-fkg-footer.svg" alt="FKG swiss endo"></a>
+                <a href="#" class="logo"><img src="img/logo-fkg-footer.svg" alt="FKG swiss endo"></a>
             </div>
             <div class="container xp-follow-container">
                 <h3>Siguenos</h3>
@@ -255,7 +255,7 @@
 <!-- Begin Mailchimp Signup Form -->
 <div id="mc_embed_signup">
 				<h4>Suscríbase a nuestro boletín</h4>
-<form action="https://fkg.us20.list-manage.com/subscribe/post?u=459e2682cbd0afb347f2f3bdf&amp;id=92850ccfb0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
+<form action="#" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
     <div id="mc_embed_signup_scroll">
 	
 <div class="indicates-required"><span class="asterisk">*</span> indica requerido</div>
@@ -306,8 +306,8 @@
             </div>
             <div class="address-privacy">
                 <div class="container">
-                    <p>FKG Dentaire SA, Jr Moquegua 270, Int 129 - 131 Cercado de Lima, Peru</p>
-                    <p><a target="_blank" href="https://www.fkg.ch/data-privacy-policy">Data Privacy Policy</a></p>
+                    <p>DIDENT SRL , Jr Moquegua 270, Int 129 - 131 Cercado de Lima, Peru</p>
+                    <p><a target="_blank" href="#">Data Privacy Policy</a></p>
                 </div>
             </div>
         </footer>
