--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                 <div class="row pt-3 pb-1">
                     <div class="col-sm-6 col-md-12 col-lg-3 offset-xl-1">
                         <h2><img src="img/logo-ids.png" alt="IDS"></h2>
-                        <h2 class="claim">METAL DISEÑO Y CINEMATICA </h2>
+                        <h2 class="claim">"Nuevos Horizontes en Instrumentacion Mecanizada"</h2>
                     </div>
                     <div class="col-sm-6 col-md-4 col-lg-4 col-xl-3">
-                        <h3>"Nuevos Horizontes en Instrumentacion Mecanizada"</h3> 
+                        <h3>METAL DISEÑO Y CINEMATICA</h3> 
                         <p>Lima, 13 de Mayo <br>A partir de las 9.00 horas,<br>hasta 11.30 Horas.</p>
                         <h4 class="mb-2">Ubicacion <br>Colegio Odontologico del Peru Calles Oceano Artico 261, Urb. Santa Constanza, Surco.</h4>
                         <p><a href="https://api.whatsapp.com/send?phone=51995160225" target="_blank" class="btn btn-outline-light">Mas info</a></p>
