--- a/contact.html
+++ b/contact.html
@@ -362,8 +362,8 @@
                 <div class="menu-products">
                     <h4>Conoce los otros productos</h4>
                     <ul class="menu">
-                        <li><a target="_blank" href="#">Shaper &amp; Finisher</a></li>
-                        <li><a target="_blank" href="#">Secuencia XP - Endo ® Shaper Plus</a></li>
+                        <li><a target="_blank" href="#">XP - Endo ® Shaper</a></li>
+                        <li><a target="_blank" href="https://didentsrl.github.io/XP-ENDO/shaper.html">Secuencia XP - Endo ® Shaper</a></li>
                         <li><a target="_blank" href="#">iRace Plus ® </a></li>
                         <li><a target="_blank" href="#">Pre Race ® </a></li>
                         <li><a target="_blank" href="#">ScoutRace ® </a></li>
