--- a/resources.html
+++ b/resources.html
@@ -260,5 +260,8 @@
         <!-- endbuild -->
     </body>
 
-<!-- Mirrored from www.fkg.ch/xpendo/resources by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 04 Apr 2019 16:54:20 GMT -->
 </html>
+
+<!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/6716306.js"></script>
+<!-- End of HubSpot Embed Code -->
