--- a/solutions.html
+++ b/solutions.html
@@ -270,5 +270,8 @@
         <!-- endbuild -->
     </body>
 
-<!-- Mirrored from www.fkg.ch/xpendo/solutions by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 04 Apr 2019 16:54:10 GMT -->
 </html>
+
+<!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/6716306.js"></script>
+<!-- End of HubSpot Embed Code -->
