--- a/solutions.html
+++ b/solutions.html
@@ -248,14 +248,13 @@
                     <ul class="social">
                         <li><a target="_blank" href="https://www.youtube.com/channel/UC85JPrQjGJcOL2GlEnRbWDQ?view_as=subscriber"><img src="img/icon-youtube-violet.svg" alt="Youtbe"></a></li>
                         <li><a target="_blank" href="https://www.facebook.com/didentoficial/"><img src="img/icon-facebook-violet.svg" alt="Facebook"></a></li>
-                        <li><a target="_blank" href="https://www.linkedin.com/in/dident-srl-21132a182/detail/recent-activity/"><img src="img/icon-linkedin-violet.svg" alt="Linkedin"></a></li>
                     </ul>
                 </div>
             </div>
             <div class="address-privacy">
                 <div class="container">
                     <p>DIDENT SRL, Jr Moquegua 270, Int 129 - 131 Cercado de Lima, Peru</p>
-                    <p><a target="_blank" href="#">Data Privacy Policy</a></p>
+                    <p>Designed by <a target="_blank" href="https://www.facebook.com/swisherlarissa/">SWISHER</a></p>
                 </div>
             </div>
         </footer>
