--- a/finisher.html
+++ b/finisher.html
@@ -5,7 +5,6 @@
 <!--[if IE 9]>         <html lang="fr" class="no-js lt-ie10"> <![endif]-->
 <!--[if gt IE 9]><!--> <html lang="fr" class="no-js"> <!--<![endif]-->
     
-<!-- Mirrored from www.fkg.ch/xpendo/finisher by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 04 Apr 2019 16:54:12 GMT -->
 <head>
         <!-- Google Tag Manager -->
         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -285,14 +284,13 @@
                     <ul class="social">
                         <li><a target="_blank" href="https://www.youtube.com/channel/UC85JPrQjGJcOL2GlEnRbWDQ?view_as=subscriber"><img src="img/icon-youtube-violet.svg" alt="Youtbe"></a></li>
                         <li><a target="_blank" href="https://www.facebook.com/didentoficial/"><img src="img/icon-facebook-violet.svg" alt="Facebook"></a></li>
-                        <li><a target="_blank" href="https://www.linkedin.com/in/dident-srl-21132a182/detail/recent-activity/"><img src="img/icon-linkedin-violet.svg" alt="Linkedin"></a></li>
                     </ul>
                 </div>
             </div>
             <div class="address-privacy">
                 <div class="container">
                     <p>DIDENT SRL, Jr Moquegua 270, Int 129 - 131 Cercado de Lima, Peru</p>
-                    <p><a target="_blank" href="#">Data Privacy Policy</a></p>
+                    <p>Designed by <a target="_blank" href="https://www.facebook.com/swisherlarissa/">SWISHER</a></p>
                 </div>
             </div>
         </footer>
@@ -307,7 +305,6 @@
         <!-- endbuild -->
     </body>
 
-<!-- Mirrored from www.fkg.ch/xpendo/finisher by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 04 Apr 2019 16:54:13 GMT -->
 </html>
 
 <!-- Start of HubSpot Embed Code -->
