--- a/contact.html
+++ b/contact.html
@@ -154,6 +154,14 @@
                 </div>
                 <a href="#" class="logo"><img src="img/logo-fkg-footer.svg" alt="FKG swiss endo"></a>
             </div>
+	    <div class="col-social">
+                    <h4>Siguenos</h4>
+                    <ul class="social">
+                        <li><a target="_blank" href="https://www.youtube.com/channel/UC85JPrQjGJcOL2GlEnRbWDQ?view_as=subscriber"><img src="img/icon-youtube-violet.svg" alt="Youtbe"></a></li>
+                        <li><a target="_blank" href="https://www.facebook.com/didentoficial/"><img src="img/icon-facebook-violet.svg" alt="Facebook"></a></li>
+                    </ul>
+                </div>
+	
             <div class="container xp-follow-container">
                 <h3>Siguenos</h3>
 
@@ -200,13 +208,8 @@
 </form>
 </div>
 
-<!--End mc_embed_signup-->                <div class="col-social">
-                    <h4>Siguenos</h4>
-                    <ul class="social">
-                        <li><a target="_blank" href="https://www.youtube.com/channel/UC85JPrQjGJcOL2GlEnRbWDQ?view_as=subscriber"><img src="img/icon-youtube-violet.svg" alt="Youtbe"></a></li>
-                        <li><a target="_blank" href="https://www.facebook.com/didentoficial/"><img src="img/icon-facebook-violet.svg" alt="Facebook"></a></li>
-                    </ul>
-                </div>
+<!--End mc_embed_signup-->      
+		
             </div>
             <div class="address-privacy">
                 <div class="container">
