--- a/contact.html
+++ b/contact.html
@@ -117,12 +117,8 @@
                                 <h1>Nosotros <br>estamos aqui <br>para ti</h1>
                             </div>
                             <div class="col-md-6">
-                                <p>Asesores Odontologicos en linea<br>Envianos un Whatsapp!</p>
-                                <p><a target="_blank" href="https://api.whatsapp.com/send?phone=51943486636" class="btn btn-dark">Gustavo</a></p>
-                            </div>
-                            <div class="col-md-6">
                                 <p>Tiene alguna pregunta? Necesitas ayuda? Estamos aqui para ti!</p>
-                                <p><a href="https://api.whatsapp.com/send?phone=51943485731" class="btn btn-primary">Ivanny</a></p>
+                                <p><a href="XP-ENDO/contact.html" class="btn btn-primary">contactenos</a></p>
                             </div>
                         </div>
                     </div>
