--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
                             </div>
                             <div class="col-md-6">
                                 <p>Tiene alguna pregunta? Necesitas ayuda? Estamos aqui para ti!</p>
-                                <p><a href="XP-ENDO/contact.html" class="btn btn-primary">contactenos</a></p>
+                                <p><a href="/XP-ENDO/contact.html" class="btn btn-primary">Contactenos</a></p>
                             </div>
                         </div>
                     </div>
